Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-18677

clang 7 fails to compile innodb

    XMLWordPrintable

Details

    Description

      C:\PROGRA~1\LLVM\bin\clang-cl.exe /nologo -TP -DBTR_CUR_ADAPT -DBTR_CUR_HASH_ADAPT -DCOMPILER_HINTS -DHAVE_CONFIG_H -DMUTEX_EVENT -DNOMINMAX -DWIN32_LEAN_AND_MEAN -D_CRT_NONSTDC_NO_WARNINGS -D_CRT_SECURE_NO_DEPRECATE -D_WIN32_WINNT=0x0A00 -D_WINDOWS -D_WIN_ -Iinclude -I..\storage\innobase\include -I..\storage\innobase\handler -I..\libbinlogevents\include -I..\include -I..\sql -Ipcre -I..\pcre -I..\extra\yassl\include -I..\extra\yassl\taocrypt\include -I..\zlib -Izlib /DWIN32 /D_WINDOWS /W3 /GR /EHsc -Wno-unused-parameter -Wno-unused-command-line-argument -Wno-pointer-sign -Wno-deprecated-register -Wno-missing-braces -Wno-unused-function -msse4.2 /we4099 /we4700 /we4311 /we4477 /we4302 /we4090 /MD /Z7 /O2 /Ob1 /DNDEBUG -DDBUG_OFF /wd4065 /showIncludes /Fostorage\innobase\CMakeFiles\innobase.dir\sync\sync0rw.cc.obj /Fdstorage\innobase\CMakeFiles\innobase.dir\innobase.pdb -c ..\storage\innobase\sync\sync0rw.cc
      ..\storage\innobase\sync\sync0rw.cc(141,18): error: call to implicitly-deleted default constructor of 'rw_lock_stats_t'
      rw_lock_stats_t rw_lock_stats;
      ^
      ..\storage\innobase\include\sync0rw.h(46,19): note: default constructor of 'rw_lock_stats_t' is implicitly deleted because field 'rw_s_spin_wait_count' has a deleted default constructor
      int64_counter_t rw_s_spin_wait_count;
      ^
      ..\storage\innobase\include/ut0counter.h(116,51): note: default constructor of 'ib_counter_t<long long, 64>' is implicitly deleted because field 'm_counter' has a deleted default constructor
      MY_ALIGNED(CACHE_LINE_SIZE) ib_counter_element_t m_counter[N];
      ^
      ..\storage\innobase\include/ut0counter.h(110,21): note: default constructor of 'ib_counter_element_t' is implicitly deleted because variant field 'value' has a non-trivial default constructor
      std::atomic<Type> value;
      ^
      1 error generated.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              wlad Vladislav Vaintroub
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1.5h
                  1.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.