MDEV-18677 :  fix clang-cl+ VS2019 compilation